--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,6 +25,9 @@
     "vite": "^3.1.4"
   },
   "dependencies": {
+    "@java-challenge/react": "*",
+    "@java-challenge/tokens": "*",
+    "@java-challenge/eslint-config": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
