--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,9 +25,10 @@
     "vite": "^3.1.4"
   },
   "dependencies": {
+    "@java-challenge/eslint-config": "*",
     "@java-challenge/react": "*",
     "@java-challenge/tokens": "*",
-    "@java-challenge/eslint-config": "*",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
