--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,6 +28,7 @@
     "@java-challenge/eslint-config": "*",
     "@java-challenge/react": "*",
     "@java-challenge/tokens": "*",
+    "@storybook/addon-a11y": "^6.5.13",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
